Added IPv6 support API endpoint

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.hikari.maximum-pool-size=2
-spring.datasource.url=jdbc:postgresql://localhost:5432/templates
-spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.url=jdbc:postgresql://34.66.159.112:5432/templates
+spring.datasource.username=dev
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
